[gd_scene load_steps=4 format=3 uid="uid://rbpa0vf1bi6q"]

[ext_resource type="Script" uid="uid://c0jw7ue6u5ire" path="res://UI/WeaponUI.gd" id="1_0gjvn"]
[ext_resource type="Texture2D" uid="uid://dhyd4d5dp1edj" path="res://UI/Icons/AmmoIcon.png" id="1_hriva"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0gjvn"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.20392157, 0.20392157, 0.2509804, 0.61960787)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.15487596, 0.154876, 0.15487587, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WeaponPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -127.0
offset_top = -88.0
offset_right = -7.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_0gjvn")
script = ExtResource("1_0gjvn")

[node name="WeaponName" type="Label" parent="WeaponPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 2
text = "Gun gun"
horizontal_alignment = 1

[node name="AmmoIcon" type="TextureRect" parent="WeaponPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 51.0
offset_right = 60.0
offset_bottom = 91.0
texture = ExtResource("1_hriva")
stretch_mode = 2

[node name="MagazineAmount" type="Label" parent="WeaponPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 68.0
offset_top = 47.0
offset_right = -4.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "50
"
horizontal_alignment = 1

[node name="AmmoAmount" type="Label" parent="WeaponPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 82.0
offset_top = 63.0
offset_right = 10.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "500"
horizontal_alignment = 1
